--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -3,5 +3,15 @@
     <li><a routerLink="/">Főoldal</a></li>
     <li><a routerLink="/foglalas">Időpontfoglalás</a></li>
     <li><a routerLink="/kapcsolat">Kapcsolat</a></li>
+
+    <ng-container *ngIf="user$ | async as user; else vendeg">
+      <li class="user-email">👤 {{ user.email }}</li>
+      <li><button class="nav-btn" (click)="logout()">Kijelentkezés</button></li>
+    </ng-container>
+
+    <ng-template #vendeg>
+      <li><a routerLink="/login">Bejelentkezés</a></li>
+      <li><a routerLink="/register">Regisztráció</a></li>
+    </ng-template>
   </ul>
 </nav>
